﻿============================== Next release ==============================
  
  new data (thanks to Tomasz Antosiewicz, University of Warsaw, Poland, for submitting data in YAML format!)
    main/MoS2/Munkhbat-o.yml
    main/MoS2/Munkhbat-e.yml
    main/MoSe2/Munkhbat-o.yml
    main/MoSe2/Munkhbat-e.yml
    main/MoTe2/Munkhbat-o.yml
    main/MoTe2/Munkhbat-e.yml
    main/NbSe2/Munkhbat-o.yml
    main/NbSe2/Munkhbat-e.yml
    main/ReS2/Munkhbat-alpha.yml
    main/ReS2/Munkhbat-beta.yml
    main/ReS2/Munkhbat-gamma.yml
    main/TaS2/Munkhbat-o.yml
    main/TaS2/Munkhbat-e.yml
    main/TaSe2/Munkhbat-o.yml
    main/TaSe2/Munkhbat-e.yml
    main/WS2/Munkhbat-o.yml
    main/WS2/Munkhbat-e.yml
    main/WSe2/Munkhbat-o.yml
    main/WSe2/Munkhbat-e.yml
    main/WTe2/Munkhbat-alpha.yml
    main/WTe2/Munkhbat-beta.yml
    main/WTe2/Munkhbat-gamma.yml
  new data (thanks to Alexandr Belosludtsev, Center for Physical Sciences and Technology, Vilnius, Lithuania, for submitting data!)
    main/Cr/Sytchkova.yml
  new data
    other/mixed crystals/AgGaS2-AgInS2/Kato-o.yml
    other/mixed crystals/AgGaS2-AgInS2/Kato-e.yml
    main/BaGa2GeSe6/Kato-o.yml
    main/BaGa2GeSe6/Kato-e.yml
    main/BaGa4S7/Kato-alpha.yml
    main/BaGa4S7/Kato-beta.yml
    main/BaGa4S7/Kato-gamma.yml
    main/AgGaSe2/Kato-o.yml
    main/AgGaSe2/Kato-e.yml	
  new data (thanks to Gavriil Romanenko, Kirensky Institute of Physics, Krasnoyarsk, Russia, for suggesting data!)
    other/liquid crystals/5CB/Wu-25.1C-o.yml
    other/liquid crystals/5CB/Wu-25.1C-e.yml
    other/liquid crystals/5CB/Wu-27.2C-o.yml
    other/liquid crystals/5CB/Wu-27.2C-e.yml
    other/liquid crystals/5CB/Wu-29.9C-o.yml
    other/liquid crystals/5CB/Wu-29.9C-e.yml
    other/liquid crystals/5CB/Wu-32.6C-o.yml
    other/liquid crystals/5CB/Wu-32.6C-e.yml
    other/liquid crystals/5CB/Wu-34.8C-o.yml
    other/liquid crystals/5CB/Wu-34.8C-e.yml
    other/liquid crystals/5PCH/Wu-25.0C-o.yml
    other/liquid crystals/5PCH/Wu-25.0C-e.yml