@@ -1,0 +1,10 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "S. Sarkar, A. K. Ghosh, M. Adnan, O. Aftenieva, V. Gupta, A. Fery, J. Joseph, T. A. F. König. Enhanced figure of merit via hybridized guided-mode resonances in 2D-metallic photonic crystal slabs, <a href=\"https://doi.org/10.1002/adom.202200954\"><i>Adv. Optical Mater.</i> <b>2022</b>, 2200954</a> (see supporting information)"
+COMMENTS: "25 wt% glycerol. Room temperature."
+DATA:
+  - type: formula 5
+    wavelength_range: 0.40 0.71
+    coefficients: 1.38922 3.5200536e-3 -2 -1.58701e-5 -4
